--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
-}
+    text-transform: capitalize;
 h1{
     margin-top: 10px;
     margin-bottom: 10px;
@@ -17,5 +17,5 @@ h2{
 button{
     border: none;
     padding-top: 10px;
-    
+
 }
