--- a/index.css
+++ b/index.css
@@ -5,9 +5,10 @@ body{
     font-weight: bold;
     text-align: center;
     text-transform: capitalize;
+}
 h1{
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom:10px;
 }
 h2{
     font-size: 50px;
@@ -17,5 +18,16 @@ h2{
 button{
     border: none;
     padding-top: 10px;
-
+    padding-bottom: 10px;
+    color: white;
+    font-weight: bold;
+    width: 200px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+}
+#increment{
+    background: darkred;
+}
+#save-btn{
+    background: darkgreen;
 }
